# privie

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
src/: crypt.rs  main.rs  path_assign.rs  sealed_box.rs  secrets.rs  utilities.rs
src/secrets/: keypair.rs  mod.rs  secret_value.rs
