[package]
name = "privie"
version = "0.1.0"
edition = "2018"
description = "Code secrets management tool"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8"
crypto_box = { version = "^0.8", features = ["std"] }
structopt = { version = "^0.3", features = ["color", "suggestions"]}
thiserror = "^1"
anyhow = "^1"
base64 = "^0.21"
json = "^0.12"
blake2 = "^0.10"

[dev-dependencies]
sodiumoxide = "^0.2"
